// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelOnTop: true
}: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="is-label-on-top mg-input mg-input--select">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <select aria-describedby="" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="blu">
              blu
            </option>
            <option value="bli">
              bli
            </option>
            <option value="blo">
              blo
            </option>
            <option value="bla">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  readonly: true
}: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <select aria-describedby="" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="blu">
              blu
            </option>
            <option value="bli">
              bli
            </option>
            <option value="blo">
              blo
            </option>
            <option value="bla">
              bla
            </option>
          </select>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <select aria-describedby="" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="blu">
              blu
            </option>
            <option value="bli">
              bli
            </option>
            <option value="blo">
              blo
            </option>
            <option value="bla">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 2`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <select aria-describedby="" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="u">
              blu
            </option>
            <option value="i">
              bli
            </option>
            <option value="o">
              blo
            </option>
            <option value="a">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 3`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <select aria-describedby="" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <optgroup label="blu">
              <option value="u">
                blu
              </option>
              <option value="i">
                bli
              </option>
            </optgroup>
            <optgroup label="blo">
              <option value="o">
                blo
              </option>
            </optgroup>
            <option value="a">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should trigger events 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="is-focused mg-input mg-input--select">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <select aria-describedby="identifier-help-text" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="blu">
              blu
            </option>
            <option value="bli">
              bli
            </option>
            <option value="blo">
              blo
            </option>
            <option value="bla">
              bla
            </option>
          </select>
        </div>
        <mg-help-text identifier="identifier-help-text">
          My help text
        </mg-help-text>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;
